--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "pg": "^7.7.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.8"
+    "nodemon": "^1.18.8",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "csr": "nodemon csr/server.js",
-    "ssr": "nodemon ssr/server.js",
-    "hbs": "nodemon hbs/server.js",
+    "test": "NODE_ENV=test tape tests/queries.test.js || tap-spec",
     "dev": "nodemon final/server.js",
-    "all": "npm run csr & npm run ssr & npm run hbs & npm run dev"
+    "start": "node final/server.js"
   },
   "author": "",
   "license": "ISC"
